# braids-project

./: .gitignore  MagmaCheck.m  MagmaCheck.out  README.md  p=5 kernel elements.ipynb  pyproject.toml  search.py
peyl/: __init__.py  braid.py  braidsearch.py  bucketing.py  jonesrep.py  lpoly.py  matrix.py  noncrossing.py  permutations.py  poly.py  polymat.py  show.py  tl.py
tests/: test_braid.py  test_bucketing.py  test_jonesrep.py  test_lpoly.py  test_noncrossing.py  test_tl.py
